--- a/Docs/runtime_parameters/runtime_parameters.tex
+++ b/Docs/runtime_parameters/runtime_parameters.tex
@@ -557,6 +557,47 @@
 %
 \begin{center}
 \begin{longtable}{|l|p{5.25in}|l|}
+\caption[castro :  simulation control
+ parameters]{castro :  simulation control
+ parameters} \label{table: castro :  simulation control
+ parameters runtime} \\
+%
+\hline \multicolumn{1}{|c|}{\textbf{parameter}} & 
+       \multicolumn{1}{ c|}{\textbf{description}} & 
+       \multicolumn{1}{ c|}{\textbf{default value}} \\ \hline 
+\endfirsthead
+
+\multicolumn{3}{c}%
+{{\tablename\ \thetable{}---continued}} \\
+\hline \multicolumn{1}{|c|}{\textbf{parameter}} & 
+       \multicolumn{1}{ c|}{\textbf{description}} & 
+       \multicolumn{1}{ c|}{\textbf{default value}} \\ \hline 
+\endhead
+
+\multicolumn{3}{|r|}{{\em continued on next page}} \\ \hline
+\endfoot
+
+\hline 
+\endlastfoot
+
+
+\rowcolor{tableShade}
+\runparamNS{T\_stopping\_criterion}{castro} &  Stop the simulation if the maximum temperature on the domain crosses this threshold. Not applied if <= 0. & -1.e200 \\
+\runparamNS{ts\_te\_stopping\_criterion}{castro} &  Stop the simulation if the maximum t_sound / t_enuc on the domain crosses this threshold. Not applied if <= 0. & -1.e200 \\
+
+
+\end{longtable}
+\end{center}
+
+} % ends \small
+
+
+{\small
+
+\renewcommand{\arraystretch}{1.5}
+%
+\begin{center}
+\begin{longtable}{|l|p{5.25in}|l|}
 \caption[castro :  timestep control
  parameters]{castro :  timestep control
  parameters} \label{table: castro :  timestep control
